<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/dialogHeader"
        android:text="@string/newfood"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:completionThreshold="1"
        android:hint="@string/namehint"
        android:id="@+id/dialogFoodName"
        android:dropDownHeight="190dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/amounthint"
        android:inputType="number"
        android:id="@+id/dialogFoodAmount"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cancelFood"
            android:text="@string/cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/addFood"
            android:text="@string/ok" />


    </LinearLayout>

</LinearLayout>